--- a/Project/Group7/app/src/main/res/layout/activity_main.xml
+++ b/Project/Group7/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:text="Result"
+        android:text="Result!😆"
         android:textSize="22sp"
         android:textFontWeight="100"
         app:layout_constraintEnd_toEndOf="parent"
